Fixing 'brands' button on iphone xs

--- a/web/app/themes/Foody/resources/sass/common/_brands-bar.scss
+++ b/web/app/themes/Foody/resources/sass/common/_brands-bar.scss
@@ -28,7 +28,7 @@
     bottom: 22px;
     font-size: 0.7rem;
     font-weight: bold;
-    padding: 2%;
+    padding: 6px;
   }
 
   .brands-avenue-mobile{
